--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Ankit and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                    <p>Hii, My name and my nature comes hand in hand. Yes "CREATIVITY". 
+                        My name is Ankit Pradhan a B.tech(CSE) undergraduate and 
+                        I love to create unique eye catching contents.
+                         I usually spend my time in designing and creating interactive, user friendly 
+                         websites. In my leisure time I do photography, Poster designing etc. </p>
                     <a href="./Ankit_Pradhan_resume.pdf" target="_blank">Download CV</a>
                 </div>
             </div>
@@ -70,23 +74,24 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">Website designing</div>
+                        <p>If you are looking for a creative eye catching website designer then you are at the right place. have a look on my works. <a href="https://www.google.com/" target="_blank">My works</a></p>
+                        
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">Poster designing</div>
+                        <p>I love to spend designing poaters like invitaion card, banner, Menus, Youtube Thumbnail, Bussiness card etc. <a href="https://www.google.com/" target="_blank">Posters</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-desktop"></i>
+                        <div class="text">UX/UI designing</div>
+                        <p>If you wish to develop a eye catchy website then you are at the write place I have a number of designs have a look. <a href="https://www.google.com/" target="_blank">Designs</a></p>
                     </div>
                 </div>
                </div>
@@ -196,7 +201,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <p>Thanks for taking the time to reach out. How can I help you today?</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
