--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
-            </div>
+            </div>  
         </div>
     </nav>
 
@@ -81,28 +81,28 @@
                     <div class="bars">
                         <div class="info">
                             <span>HTML</span>
-                            <span>90%</span>
+                            <span>95%</span>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>60%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>80%</span>
+                            <span>30%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>PHP</span>
-                            <span>50%</span>
+                            <span>JAVA</span>
+                            <span>70%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
