--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         I love to create unique eye catching contents.
                          I usually spend my time in designing and creating interactive, user friendly 
                          websites. In my leisure time I do photography, Poster designing etc. </p>
-                    <a href="./Ankit_Pradhan_resume.pdf" target="_blank">Download CV</a>
+                    <a href="./Ankit_Pradhan_resume.pdf" target="_blank">Download Resume</a>
                 </div>
             </div>
         </div>
