--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
                             <span>JAVA</span>
                             <span>70%</span>
                         </div>
-                        <div class="line php"></div>
+                        <div class="line java"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>MySQL</span>
+                            <span>Oracle SQL</span>
                             <span>70%</span>
                         </div>
-                        <div class="line mysql"></div>
+                        <div class="line sql"></div>
                     </div>
                 </div>
             </div>
