--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>SQL</span>
+                            <span>Oracle SQL</span>
                             <span>70%</span>
                         </div>
                         <div class="line sql"></div>
