--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#Projects" class="menu-btn">Projects</a></li>
-                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <!-- <li><a href="#teams" class="menu-btn">Teams</a></li> -->
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -74,7 +74,9 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                    <p>I love to create user friendly eye catchy websites. Apart from frontend I have also intrest in Backend too. Using Java I do backend development also. I have developed one web site i.e. Placement Management System which is a full stack project. I have used HTML,CSS,JS and Angular for fronted development , for backend i have used JAVA, MySql  and Apache tomcat for server.
+                        Apart from technical skills I do Photography and poster designn etc.
+                    </p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -102,14 +104,14 @@
                     <div class="bars">
                         <div class="info">
                             <span>JAVA</span>
-                            <span>70%</span>
+                            <span>50%</span>
                         </div>
                         <div class="line java"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Oracle SQL</span>
-                            <span>70%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line sql"></div>
                     </div>
@@ -191,6 +193,49 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/profile-5.jpeg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/profile-5.jpeg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/profile-5.jpeg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/profile-5.jpeg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/profile-5.jpeg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/profile-5.jpeg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                 
             </div>
         </div>
     </section>
